# tts3

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
api/: dependencies.py  main.py  models.py  services.py
api/routes/: announce.py  obs.py  settings.py  synthesize.py
app/: bootstrap.py  config.py  guild_settings.py  logging.py  main.py  media.py  obs.py  runner.py  services.py
audio/: __init__.py  generated_audio.py  player.py  queue.py  voice_connection.py
bot/: client.py  service_container.py  services.py
bot/commands/: __init__.py  service.py  voice.py
bot/events/: messages.py  voice_state.py
domain/: __init__.py  announcements.py  routing.py  services.py  state.py  types.py
parsing/: __init__.py  classification.py  messages.py  normalization.py
storage/: db.py  migrations.py  models.py  repositories.py
tests/: conftest.py  test_api.py  test_parsing.py  test_provider.py  test_routing.py  test_spoken_events.py  test_storage.py  test_voice_catalog.py  test_voice_recovery.py
tts/: __init__.py  base.py  provider.py  voices.py
